created backend login system almost done; reworked mod list

--- a/src/main/resources/login/login-page.css
+++ b/src/main/resources/login/login-page.css
@@ -99,7 +99,7 @@ main grid */
   border-radius: 5px;
   color: white;
   font-weight: bold;
-  background-color: #3a3a3a;
+  background-color: #16e66c;
   cursor: pointer;
   outline: none;
 }
