--- a/src/main/resources/html/inv/inv.css
+++ b/src/main/resources/html/inv/inv.css
@@ -34,7 +34,7 @@
     font-family: Minecraft;
     margin-left: 150px;
     font-size: 25px;
-    margin-top: 2500px;
+    margin-top: 250px;
 }
 
 #icon{
@@ -408,7 +408,7 @@
     margin-top: 130px;
     color: white;
     font-size: 16.5px;
-    margin-left: 220px;
+    margin-left: 215px;
 }
 
 #ec{
@@ -418,4 +418,244 @@
 #iconEC{
     margin-top: -200px;
     margin-left: 15px;
+}
+
+#iconEC9{
+    margin-top: -246px;
+    margin-left: 16.8px;
+}
+
+#iconEC18{
+    margin-top: -180px;
+    margin-left: 16.8px;
+}
+
+#iconEC27{
+    margin-top: -125px;
+    margin-left: 16.8px;
+}
+
+#e0{
+    font-family: Minecraft;
+    margin-top: -178px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 30px;
+}
+
+#e1{
+    font-family: Minecraft;
+    margin-top: -17.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 78px;
+}
+
+#e2{
+    font-family: Minecraft;
+    margin-top: -16px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 128px;
+}
+
+#e3{
+    font-family: Minecraft;
+    margin-top: -16px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 175px;
+}
+
+#e4{
+    font-family: Minecraft;
+    margin-top: -16px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 225px;
+}
+
+#e5{
+    font-family: Minecraft;
+    margin-top: -16px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 270px;
+}
+
+#e6{
+    font-family: Minecraft;
+    margin-top: -16.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 320px;
+}
+
+#e7{
+    font-family: Minecraft;
+    margin-top: -16.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 370px;
+}
+
+#e8{
+    font-family: Minecraft;
+    margin-top: -16.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 420px;
+}
+
+#e9{
+    font-family: Minecraft;
+    margin-top: 31px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 30px;
+}
+
+#e10{
+    font-family: Minecraft;
+    margin-top: -16.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 78px;
+}
+
+#e11{
+    font-family: Minecraft;
+    margin-top: -16.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 128px;
+}
+
+#e12{
+    font-family: Minecraft;
+    margin-top: -16.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 175px;
+}
+
+#e13{
+    font-family: Minecraft;
+    margin-top: -17px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 225px;
+}
+
+#e14{
+    font-family: Minecraft;
+    margin-top: -17px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 270px;
+}
+
+#e15{
+    font-family: Minecraft;
+    margin-top: -17px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 320px;
+}
+
+#e16{
+    font-family: Minecraft;
+    margin-top: -16.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 370px;
+}
+
+#e17{
+    font-family: Minecraft;
+    margin-top: -16.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 420px;
+}
+
+
+#e18{
+    font-family: Minecraft;
+    margin-top: 31px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 30px;
+}
+
+#e19{
+    font-family: Minecraft;
+    margin-top: -16.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 78px;
+}
+
+#e20{
+    font-family: Minecraft;
+    margin-top: -16.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 128px;
+}
+
+#e21{
+    font-family: Minecraft;
+    margin-top: -16.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 175px;
+}
+
+#e22{
+    font-family: Minecraft;
+    margin-top: -16.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 225px;
+}
+
+#e23{
+    font-family: Minecraft;
+    margin-top: -16.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 270px;
+}
+
+#e24{
+    font-family: Minecraft;
+    margin-top: -16.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 320px;
+}
+
+#e25{
+    font-family: Minecraft;
+    margin-top: -16.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 370px;
+}
+
+#e26{
+    font-family: Minecraft;
+    margin-top: -16.5px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 420px;
+}
+
+#e27{
+    font-family: Minecraft;
+    margin-top: 33px;
+    color: white;
+    font-size: 16.5px;
+    margin-left: 30px;
 }
