--- a/src/main/resources/html/panel/inv.css
+++ b/src/main/resources/html/panel/inv.css
@@ -703,3 +703,11 @@
     font-size: 16.5px;
     margin-left: 30px;
 }
+
+.skin{
+    position: absolute;
+    margin-top: 33px;
+    margin-left: 85px;
+    width: 80px;
+    height: auto;
+}
